fixing release tests